eks/my-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      imagePullSecrets:
      - name: tuanngoc
      containers:
      - name: my-app
        imagePullPolicy: Always
        image: 00375877633/latest
        ports:
          - containerPort: 8080
