eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:

  rules:
    - host: petclinic.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 8080
